Fix footer overflow

--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -18,7 +18,7 @@
   align-items: center;
   gap: 2rem;
   font-size: 1.5rem;
-  padding: 0.75rem 2rem;
+  padding: 0.75rem 0;
   border-radius: 0.75rem;
   font-weight: 500;
   border: none;
@@ -49,5 +49,9 @@
 
   .download_wrapper {
     flex-direction: column;
+  }
+
+  .downloads {
+    font-size: 1rem;
   }
 }
